--- a/app/src/main/res/layout/spinner_textview.xml
+++ b/app/src/main/res/layout/spinner_textview.xml
@@ -2,9 +2,12 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/spinner_txtview_txt"
     android:gravity="left"
+    android:paddingLeft="12dp"
+    android:paddingTop="7dp"
+    android:paddingBottom="8dp"
     android:textSize="@dimen/app_text_size_default"
     android:textColor="@android:color/black"
-    android:padding="5dp"
     >
 </TextView>
