--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,155 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical"
-    android:id="@+id/activity_main"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.moutaigua.accounting.MainActivity">
+    android:orientation="vertical"
+    android:background="@android:color/white">
 
+     <!-- project from https://github.com/jpardogo/PagerSlidingTabStrip -->
+    <com.astuetz.PagerSlidingTabStrip
+        android:id="@+id/main_tabs"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:background="@color/accountingPrimary"
+        app:pstsIndicatorColor="@android:color/white"
+        app:pstsTabTextSize="20sp"
+        app:pstsTabTextColor="@drawable/tab_text_color_selector"
+        app:pstsTabTextAllCaps="false"
+        app:pstsShouldExpand="true"/>
 
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/EachLine_Title" android:text="Date:" />
-        <EditText style="@style/EachLine_Content"
-            android:id="@+id/editxt_date"
-            android:hint="Date"
-            android:inputType="date"
-            />
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/EachLine_Title" android:text="Time:" />
-        <EditText style="@style/EachLine_Content"
-            android:id="@+id/editxt_time"
-            android:hint="Time"
-            android:inputType="time"
-            />
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/EachLine_Title" android:text="City:" />
-        <EditText style="@style/EachLine_Content"
-            android:id="@+id/editxt_location"
-            android:hint="City"
-            android:inputType="textPersonName"
-            />
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/EachLine_Title" android:text="Provider:" />
-        <AutoCompleteTextView style="@style/EachLine_Content"
-            android:id="@+id/textview_provider"
-            android:hint="Service Provider"
-            android:inputType="textAutoComplete|textAutoCorrect"
-            android:imeOptions="actionSearch"
-            android:completionThreshold="1"
-            />
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/EachLine_Title" android:text="Buyer:" />
-        <Spinner style="@style/EachLine_Content"
-            android:id="@+id/spinner_buyer"
-            />
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/EachLine_Title" android:text="Payer:" />
-        <FrameLayout style="@style/EachLine_Content">
-            <ToggleButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/toggle_whopay"
-                android:text="Mou pay?"
-                android:textSize="@dimen/app_text_size_default"
-                android:textOff="Mou pay?"
-                android:textOn="Mou pay?"/>
-        </FrameLayout>
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/EachLine_Title" android:text="Amount:" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="$"
-            android:textSize="@dimen/app_text_size_default"
-            android:textColor="@android:color/black"
-            />
-        <EditText style="@style/EachLine_Content"
-            android:id="@+id/editxt_money"
-            android:inputType="numberDecimal"
-            />
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/EachLine_Title" android:text="Note:" />
-        <EditText style="@style/EachLine_Content"
-            android:id="@+id/editxt_note"
-            android:hint="Note"
-            android:gravity="top|left"
-            android:inputType="textMultiLine"
-            />
-    </LinearLayout>
-
-
-    <!--seperate-->
-    <View style="@style/Seperator_Line" />
-    <!--seperate-->
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/Status_Title" android:text="Dropbox Linked:" />
-        <FrameLayout style="@style/EachLine_Content">
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_dropbox"
-                android:layout_gravity="end"
-                android:text="@string/dropbox_login"
-                android:textSize="@dimen/app_text_size_small"
-                />
-        </FrameLayout>
-
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/Status_Title" android:text="Dropbox Update Status:" />
-        <TextView style="@style/Status_Content" android:id="@+id/txt_status_dropbox" android:text="@string/status_initial" />
-    </LinearLayout>
-
-    <LinearLayout style="@style/EachLine" >
-        <TextView style="@style/Status_Title" android:text="WaCai Update Status:" />
-        <TextView style="@style/Status_Content" android:id="@+id/txt_status_wacai" android:text="@string/status_initial" />
-
-    </LinearLayout>
-
-
-    <!--seperate-->
-    <View style="@style/Seperator_Line" />
-    <!--seperate-->
-
-    <LinearLayout style="@style/EachLine" android:layout_marginTop="5dp" >
-        <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.05"/>
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:id="@+id/btn_submit"
-            android:text="Submit"
-            android:textSize="@dimen/app_text_size_default" />
-        <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.05"/>
-        <Button
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="0.2"
-            android:id="@+id/btn_exit"
-            android:text="Exit"
-            android:textSize="@dimen/app_text_size_default" />
-        <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.05"/>
-    </LinearLayout>
-
+    <android.support.v4.view.ViewPager
+        android:id="@+id/main_viewpager"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent" />
 
 </LinearLayout>
