--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
+    <style name="AppTheme" parent="android:Theme.Light.NoTitleBar">
         <!-- Customize your theme here. -->
     </style>
 
@@ -10,12 +10,10 @@
     <style name="Seperator_Line">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">1dp</item>
-        <item name="android:layout_marginTop">3dp</item>
-        <item name="android:layout_marginBottom">3dp</item>
-        <item name="android:background">@android:color/darker_gray</item>
+        <item name="android:background">@android:color/black</item>
     </style>
 
-    <style name="EachLine" >
+    <style name="Form_EachLine" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:orientation">horizontal</item>
@@ -24,20 +22,30 @@
     </style>
 
 
-    <style name="EachLine_Title" >
+    <style name="Form_EachLine_Title" >
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">0.3</item>
         <item name="android:textSize">@dimen/app_text_size_default</item>
         <item name="android:textColor">@android:color/black</item>
+        <item name="android:gravity">top</item>
     </style>
 
-    <style name="EachLine_Content" >
+    <style name="Form_EachLine_EditText" >
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">0.7</item>
         <item name="android:textSize">@dimen/app_text_size_default</item>
         <item name="android:textColor">@android:color/black</item>
+    </style>
+
+    <style name="Form_EachLine_Spinner" >
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">0.7</item>
+        <item name="android:textSize">@dimen/app_text_size_default</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:spinnerMode">dropdown</item>
     </style>
 
     <style name="Status_Title" >
@@ -56,5 +64,23 @@
         <item name="android:gravity">right</item>
     </style>
 
+
+    <style name="Setting_EachLine_EditText" >
+        <item name="android:layout_width">180dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_alignParentLeft">true</item>
+        <item name="android:textSize">@dimen/app_text_size_default</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="Setting_EachLine_Button" >
+        <item name="android:layout_width">150dp</item>
+        <item name="android:layout_height">50dp</item>
+        <item name="android:layout_alignParentRight">true</item>
+        <item name="android:textSize">@dimen/app_text_size_default</item>
+        <item name="android:textColor">@android:color/black</item>
+        <item name="android:textAllCaps">false</item>
+    </style>
 
 </resources>
