--- a/app/src/main/res/layout/fragment_manual.xml
+++ b/app/src/main/res/layout/fragment_manual.xml
@@ -10,21 +10,14 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/accountingBackground"
     tools:context="com.moutaigua.accounting.ActivityMain">
-
-
-    <LinearLayout style="@style/Form_EachLine" >
-        <Spinner style="@style/Form_EachLine_Spinner"
-            android:id="@+id/fragment_pending_spinner_transaction_list"
-            />
-    </LinearLayout>
+    
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scrollbars="none"
         android:fillViewport="true"
-        android:id="@+id/fragment_pending_layout_details"
-        android:visibility="invisible"
+        android:id="@+id/fragment_manual_layout_details"
         tools:visibility="visible"
         >
         <LinearLayout
@@ -33,6 +26,15 @@
             android:layout_height="wrap_content"
             android:paddingTop="20dp"
             android:paddingBottom="60dp">
+
+            <LinearLayout style="@style/Form_EachLine" >
+                <TextView style="@style/Form_EachLine_Title" android:text="Time:" />
+                <EditText style="@style/Form_EachLine_EditText"
+                    android:id="@+id/fragment_manual_editxt_time"
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
+                    />
+            </LinearLayout>
 
             <LinearLayout style="@style/Form_EachLine" >
                 <TextView style="@style/Form_EachLine_Title" android:text="Amount:" />
@@ -44,7 +46,7 @@
                     android:textColor="@android:color/black"
                     />
                 <EditText style="@style/Form_EachLine_EditText"
-                    android:id="@+id/fragment_pending_editxt_money"
+                    android:id="@+id/fragment_manual_editxt_money"
                     android:inputType="numberDecimal"
                     />
             </LinearLayout>
@@ -52,7 +54,7 @@
             <LinearLayout style="@style/Form_EachLine" >
                 <TextView style="@style/Form_EachLine_Title" android:text="Divided By:" />
                 <EditText style="@style/Form_EachLine_EditText"
-                    android:id="@+id/fragment_pending_editxt_seperate"
+                    android:id="@+id/fragment_manual_editxt_seperate"
                     android:inputType="number"
                     />
             </LinearLayout>
@@ -61,7 +63,7 @@
                 <TextView style="@style/Form_EachLine_Title" android:text="Provider:" />
                 <AutoCompleteTextView style="@style/Form_EachLine_EditText"
                     android:layout_weight="0.6"
-                    android:id="@+id/fragment_pending_editxt_provider"
+                    android:id="@+id/fragment_manual_editxt_provider"
                     android:hint="Service Provider"
                     android:inputType="textAutoComplete|textAutoCorrect"
                     android:imeOptions="actionSearch"
@@ -75,7 +77,7 @@
                     android:paddingTop="8dp"
                     android:paddingBottom="8dp"
                     android:layout_marginLeft="4dp"
-                    android:id="@+id/fragment_pending_checkbox_gps"
+                    android:id="@+id/fragment_manual_checkbox_gps"
                     android:text="GPS"
                     android:textColor="@android:color/white"
                     android:textSize="16dp"
@@ -88,21 +90,21 @@
             <LinearLayout style="@style/Form_EachLine" >
                 <TextView style="@style/Form_EachLine_Title" android:text="Category:" />
                 <Spinner style="@style/Form_EachLine_Spinner"
-                    android:id="@+id/fragment_pending_spinner_category"
+                    android:id="@+id/fragment_manual_spinner_category"
                     />
             </LinearLayout>
 
             <LinearLayout style="@style/Form_EachLine" >
                 <TextView style="@style/Form_EachLine_Title" android:text="Type:" />
                 <Spinner style="@style/Form_EachLine_Spinner"
-                    android:id="@+id/fragment_pending_spinner_type"
+                    android:id="@+id/fragment_manual_spinner_type"
                     />
             </LinearLayout>
 
             <LinearLayout style="@style/Form_EachLine" >
                 <TextView style="@style/Form_EachLine_Title" android:text="City:" />
                 <EditText style="@style/Form_EachLine_EditText"
-                    android:id="@+id/fragment_pending_editxt_city"
+                    android:id="@+id/fragment_manual_editxt_city"
                     android:hint="City"
                     android:inputType="textPersonName"
                     />
@@ -111,7 +113,7 @@
             <LinearLayout style="@style/Form_EachLine" >
                 <TextView style="@style/Form_EachLine_Title" android:text="Note:" />
                 <EditText style="@style/Form_EachLine_EditText"
-                    android:id="@+id/fragment_pending_editxt_note"
+                    android:id="@+id/fragment_manual_editxt_note"
                     android:hint="Note"
                     android:gravity="top|left"
                     android:inputType="textMultiLine"
@@ -126,7 +128,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.2"
-                    android:id="@+id/fragment_pending_btn_submit"
+                    android:id="@+id/fragment_manual_btn_submit"
                     android:text="Submit"
                     android:textSize="@dimen/app_text_size_default" />
                 <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.05"/>
@@ -134,7 +136,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.2"
-                    android:id="@+id/fragment_pending_btn_exit"
+                    android:id="@+id/fragment_manual_btn_exit"
                     android:text="Exit"
                     android:textSize="@dimen/app_text_size_default" />
                 <Space android:layout_width="0dp" android:layout_height="wrap_content" android:layout_weight="0.05"/>
@@ -149,7 +151,7 @@
 
             <LinearLayout style="@style/Form_EachLine" >
                 <TextView style="@style/Status_Title"
-                    android:id="@+id/fragment_pending_txt_status"
+                    android:id="@+id/fragment_manual_txt_status"
                     android:scrollbars="vertical"
                     android:lines="6"
                     tools:text="-- Update" />
