--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="accountingPrimary">#0099ff</color>
     <color name="accountingBackground">#f2f2f2</color>
+    <color name="textCheckButton_unckecked">#d9d9d9</color>
+    <color name="textCheckButton_ckecked">#29a329</color>
 </resources>
